# ktb3-yanni-community-be

./: .gitignore  README.md  community.db  create_test_user.py  data.csv  main.py  pull_request_template.md  pyproject.toml  requirements.txt  setup.sh  studynote.md  test_api.sh  test_auth_and_post.sh
.github/: .gitmessage  pull_request_template.md
app/: __init__.py  database.py  db_models.py  main.py
app/controllers/: __init__.py  comment_controller.py  controller_instances.py  post_controller.py  user_controller.py
app/databases/: __init__.py  database.py  db_models.py
app/models/: __init__.py  comment_model.py  post_model.py  user_model.py
app/routes/: __init__.py  auth_routes.py  comment_routes.py  dev_routes.py  post_routes.py
app/schemas/: __init__.py  auth_schema.py  comment_schema.py  post_schema.py
app/services/: __init__.py  ai_comment_service.py
app/utils/: __init__.py  auth.py  config_loader.py  dependencies.py
bashs/: debug_ai_service.py  reset_data.sh  setup.sh  test_ai_comment.sh  test_all.sh  test_jwt_auth.sh  test_openrouter_api.py
config/: ai_service.yaml
