[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "community-backend"
version = "0.2.0"
description = "A simple Community backend project using FastAPI with Clean Architecture (Route-Controller-Schema)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "yanni", email = "kkyanwoo@gmail.com" }
]
keywords = ["fastapi", "backend", "community", "rest-api", "clean-architecture"]



dependencies = [
    # Web Framework
    "fastapi==0.115.2",          # ASGI based async web framework
    "uvicorn[standard]==0.32.0", # ASGI server
    "pydantic>=2.0.0",           # Data validation and schema definitions

    # Database
    "sqlalchemy>=2.0.0",         # ORM (Object-Relational Mapping)
    "alembic>=1.12.0",           # Database migration tool

    # AI & LLM
    "httpx>=0.25.0"              # Async HTTP client for API calls (OpenRouter)
]



[project.urls]
Homepage = "https://github.com/yanwoo8/ktb3-yanni-community-be"
Repository = "https://github.com/yanwoo8/ktb3-yanni-community-be"
Documentation = "https://github.com/yanwoo8/ktb3-yanni-community-be/blob/main/README.md"
Issues = "https://github.com/yanwoo8/ktb3-yanni-community-be/issues"